--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,11 @@
 }
 
 body {
-  background: var(--background);
+  background-color: #fff;
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  min-height: 100%;
+  margin: 0;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 170%;
 }
