--- a/app/globals.css
+++ b/app/globals.css
@@ -21,7 +21,7 @@
 
 body {
   background-color: #fff;
-  color: var(--foreground);
+  color: #3c3a4a;
   min-height: 100%;
   margin: 0;
   font-size: 16px;
